MWPW-187490-fix scroll issue and on landscape input was not visible

--- a/edsdme/blocks/yukon-chat/yukon-chat.css
+++ b/edsdme/blocks/yukon-chat/yukon-chat.css
@@ -5,7 +5,7 @@
   --yc-card-radius: 12px;
   --yc-input-radius: 28px;
   --yc-input-height: 52px;
-  --yc-header-heigth: 57px;
+  --yc-header-height: 57px;
   --yc-input-border: linear-gradient(98.11deg, #9A3CF9 -4.21%, #E743C8 35.46%, #ED457E 68.67%, #FF7918 104.7%);
   --yc-button-dimensions: 32px;
   --yc-button-radius: 50%;
@@ -1170,8 +1170,8 @@ chat-history-left .user-message {
     max-height: calc(100dvh - var(--feds-height-nav)) ;
   }
   .yukon-chat-dialog-body {
-    max-height: calc(100vh - var(--yc-header-heigth) - var(--feds-height-nav));
-    max-height: calc(100dvh - var(--yc-header-heigth) - var(--feds-height-nav));
+    max-height: calc(100vh - var(--yc-header-height) - var(--feds-height-nav));
+    max-height: calc(100dvh - var(--yc-header-height) - var(--feds-height-nav));
   }
   .yukon-chat-container {
     padding-bottom: 0;
